tests/mm0_mmu/fail/bad-sort314.mmu
-- bad modifier order
(sort s314 provable pure free)